Code editor: make statusbar file name a % size and hide overflow to ensure other statusbar items are not lost at small screen sizes

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -143,7 +143,6 @@ body {
     text-decoration: underline;
 }
 
-
 .statusbar {
     bottom: 0;
     position: absolute;
@@ -173,6 +172,15 @@ body {
 
 #statusbar-location {
     min-width: 100px;
+}
+
+#statusbar-file {
+    max-width: 40%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: left;
+    direction: rtl;
 }
 
 .ace_status-indicator {
